--- a/.github/workflows/docker-biuld.yml
+++ b/.github/workflows/docker-biuld.yml
@@ -3,21 +3,25 @@ name: Docker Image CI
 on:
   push:
     branches:
-      - main  # 或者你希望触发构建的分支名称
+      - main
   pull_request:
     branches:
-      - main  # 或者你希望触发构建的分支名称
+      - main
 
 jobs:
   build-and-push:
     runs-on: ubuntu-latest
-
+    
     steps:
     - name: Checkout code
       uses: actions/checkout@v2
 
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v1
+      with:
+        driver-opts: |
+          network=host
+          cache-inline=true
 
     - name: Log in to Docker Hub
       uses: docker/login-action@v1
@@ -25,11 +29,12 @@ jobs:
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
 
-    - name: Build and push
+    - name: Build and push multi-arch images
       uses: docker/build-push-action@v2
       with:
         context: .
         file: ./Dockerfile
+        platforms: linux/amd64,linux/arm64
         push: true
         tags: |
           jiongjiong/dangbei2api:latest
