--- a/.github/workflows/docker-biuld.yml
+++ b/.github/workflows/docker-biuld.yml
@@ -16,6 +16,11 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v2
 
+    - name: Get Version
+      run: |
+        VERSION=$(grep "VERSION = " version.py | cut -d\' -f2)
+        echo "VERSION=$VERSION" >> $GITHUB_ENV
+
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v1
 
@@ -34,4 +39,4 @@ jobs:
         push: true
         tags: |
           jiongjiong/dangbei2api:latest
-          jiongjiong/dangbei2api:${{ github.sha }}
+          jiongjiong/dangbei2api:${{ env.VERSION }}
